@@ -16,19 +16,19 @@
 
 package io.helidon.build.archetype.engine.v2.interpreter;
 
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 
-import io.helidon.build.archetype.engine.v2.PropertyEvaluator;
 import io.helidon.build.archetype.engine.v2.archive.Archetype;
 import io.helidon.build.archetype.engine.v2.descriptor.ArchetypeDescriptor;
+import io.helidon.build.common.PropertyEvaluator;
 
 /**
  * Interpret user inputs and produce new steps.
@@ -45,20 +45,22 @@ public class Interpreter implements Visitor<ASTNode> {
     private final List<UserInputAST> unresolvedInputs = new ArrayList<>();
     private final Deque<ASTNode> stack = new ArrayDeque<>();
     private final List<Visitor<ASTNode>> additionalVisitors;
+    private final Map<String, ScriptAST> pathToSourceNode = new HashMap<>();
+    private final String startDescriptorPath;
+    private final Map<String, String> externalDefaults;
     private boolean skipOptional;
-    private String startDescriptorPath;
     private boolean canBeGenerated = false;
 
-    Interpreter(
-            Archetype archetype,
-            String startDescriptorPath,
-            boolean skipOptional,
-            List<Visitor<ASTNode>> additionalVisitors
-    ) {
+    Interpreter(Archetype archetype,
+                String startDescriptorPath,
+                boolean skipOptional,
+                List<Visitor<ASTNode>> additionalVisitors,
+                Map<String, String> externalDefaults) {
         this.archetype = archetype;
         pathToContextNodeMap = new HashMap<>();
         this.additionalVisitors = additionalVisitors;
         this.startDescriptorPath = startDescriptorPath;
+        this.externalDefaults = externalDefaults;
         this.skipOptional = skipOptional;
     }
 
@@ -113,7 +115,7 @@ public class Interpreter implements Visitor<ASTNode> {
     @Override
     public void visit(InputBooleanAST input, ASTNode parent) {
         applyAdditionalVisitors(input);
-        input.defaultValue(replaceDefaultValue(input.defaultValue()));
+        replaceDefaultValue(input);
         validate(input);
         pushToStack(input);
         boolean result = resolve(input);
@@ -133,7 +135,7 @@ public class Interpreter implements Visitor<ASTNode> {
     @Override
     public void visit(InputEnumAST input, ASTNode parent) {
         applyAdditionalVisitors(input);
-        input.defaultValue(replaceDefaultValue(input.defaultValue()));
+        replaceDefaultValue(input);
         validate(input);
         pushToStack(input);
         boolean result = resolve(input);
@@ -148,7 +150,7 @@ public class Interpreter implements Visitor<ASTNode> {
     @Override
     public void visit(InputListAST input, ASTNode parent) {
         applyAdditionalVisitors(input);
-        input.defaultValue(replaceDefaultValue(input.defaultValue()));
+        replaceDefaultValue(input);
         validate(input);
         pushToStack(input);
         boolean result = resolve(input);
@@ -163,8 +165,7 @@ public class Interpreter implements Visitor<ASTNode> {
     @Override
     public void visit(InputTextAST input, ASTNode parent) {
         applyAdditionalVisitors(input);
-        input.defaultValue(replaceDefaultValue(input.defaultValue()));
-        input.placeHolder(replaceDefaultValue(input.placeHolder()));
+        replaceDefaultValue(input);
         validate(input);
         pushToStack(input);
         boolean result = resolve(input);
@@ -179,15 +180,18 @@ public class Interpreter implements Visitor<ASTNode> {
     public void visit(ExecAST exec, ASTNode parent) {
         applyAdditionalVisitors(exec);
         if (pushToStack(exec)) {
-            ArchetypeDescriptor descriptor = archetype
-                    .getDescriptor(resolveScriptPath(exec.location().scriptDirectory(), exec.src()));
-            String currentDir = Paths
-                    .get(resolveScriptPath(exec.location().scriptDirectory(), exec.src()))
-                    .getParent().toString();
+            String scriptDirectory = exec.location().scriptDirectory();
+            String scriptFile = exec.source();
+            String descriptorPath = resolveScriptPath(scriptDirectory, scriptFile);
+            ArchetypeDescriptor descriptor = getDescriptor(exec, descriptorPath);
+            Path path = Paths.get(descriptorPath);
+            String currentDir = path.getParent().toString();
             ASTNode.Location newLocation = ASTNode.Location.builder()
-                    .scriptDirectory(currentDir)
-                    .currentDirectory(currentDir)
-                    .build();
+                                                           .scriptFile(descriptorPath)
+                                                           .scriptDirectory(currentDir)
+                                                           .currentDirectory(currentDir)
+                                                           .build();
+            setParent(exec, parent);
             XmlDescriptor xmlDescriptor = XmlDescriptor.create(descriptor, exec, newLocation);
             exec.help(xmlDescriptor.help());
             exec.children().addAll(xmlDescriptor.children());
@@ -200,15 +204,17 @@ public class Interpreter implements Visitor<ASTNode> {
     public void visit(SourceAST source, ASTNode parent) {
         applyAdditionalVisitors(source);
         if (pushToStack((source))) {
-            ArchetypeDescriptor descriptor = archetype
-                    .getDescriptor(resolveScriptPath(source.location().scriptDirectory(), source.source()));
-            String currentDir = Paths
-                    .get(resolveScriptPath(source.location().scriptDirectory(), source.source()))
-                    .getParent().toString();
+            String scriptDirectory = source.location().scriptDirectory();
+            String scriptFile = source.source();
+            String descriptorPath = resolveScriptPath(scriptDirectory, scriptFile);
+            ArchetypeDescriptor descriptor = getDescriptor(source, descriptorPath);
+            String currentDir = Paths.get(descriptorPath).getParent().toString();
             ASTNode.Location newLocation = ASTNode.Location.builder()
-                    .scriptDirectory(currentDir)
-                    .currentDirectory(source.location().currentDirectory())
-                    .build();
+                                                           .scriptFile(descriptorPath)
+                                                           .scriptDirectory(currentDir)
+                                                           .currentDirectory(source.location().currentDirectory())
+                                                           .build();
+            setParent(source, parent);
             XmlDescriptor xmlDescriptor = XmlDescriptor.create(descriptor, source, newLocation);
             source.help(xmlDescriptor.help());
             source.children().addAll(xmlDescriptor.children());
@@ -217,11 +223,48 @@ public class Interpreter implements Visitor<ASTNode> {
         stack.pop();
     }
 
+    private ArchetypeDescriptor getDescriptor(ScriptAST script, String descriptorPath) {
+        // Check for duplicate script includes
+        ScriptAST existing = pathToSourceNode.putIfAbsent(descriptorPath, script);
+        if (existing == null) {
+            return archetype.getDescriptor(descriptorPath);
+        } else {
+            String existingPath = existing.location().scriptPath();
+            String existingType = existing.includeType();
+            String scriptPath = script.location().scriptPath();
+            String scriptType = script.includeType();
+            String error = isCycle(script, descriptorPath) ? "Include cycle" : "Duplicate include";
+            throw new IllegalStateException(error + ": '" + descriptorPath
+                                            + "' is included via <" + existingType
+                                            + "> in '" + existingPath + "' and again via <"
+                                            + scriptType
+                                            + "> in '" + scriptPath + "'");
+        }
+    }
+
+    private static boolean isCycle(ScriptAST duplicate, String descriptorPath) {
+        ASTNode parent = duplicate.parent();
+        while (parent != null) {
+            if (parent instanceof ScriptAST) {
+                ScriptAST scriptParent = (ScriptAST) parent;
+                if (scriptParent.location().scriptPath().equals(descriptorPath)) {
+                    return true;
+                }
+            }
+            parent = parent.parent();
+        }
+        return false;
+    }
+
+    private static void setParent(ASTNode node, ASTNode parent) {
+        if (node.parent() == null && parent != null) {
+            node.parent(parent);
+        }
+    }
+
     @Override
     public void visit(ContextAST context, ASTNode parent) {
-        if (context.parent() == null && parent != null) {
-            context.parent(parent);
-        }
+        setParent(context, parent);
         applyAdditionalVisitors(context);
         cleanUnresolvedInputs(context);
         acceptAll(context);
@@ -229,36 +272,28 @@ public class Interpreter implements Visitor<ASTNode> {
 
     @Override
     public void visit(ContextBooleanAST contextBoolean, ASTNode parent) {
-        if (contextBoolean.parent() == null && parent != null) {
-            contextBoolean.parent(parent);
-        }
+        setParent(contextBoolean, parent);
         applyAdditionalVisitors(contextBoolean);
         pathToContextNodeMap.putIfAbsent(contextBoolean.path(), contextBoolean);
     }
 
     @Override
     public void visit(ContextEnumAST contextEnum, ASTNode parent) {
-        if (contextEnum.parent() == null && parent != null) {
-            contextEnum.parent(parent);
-        }
+        setParent(contextEnum, parent);
         applyAdditionalVisitors(contextEnum);
         pathToContextNodeMap.putIfAbsent(contextEnum.path(), contextEnum);
     }
 
     @Override
     public void visit(ContextListAST contextList, ASTNode parent) {
-        if (contextList.parent() == null && parent != null) {
-            contextList.parent(parent);
-        }
+        setParent(contextList, parent);
         applyAdditionalVisitors(contextList);
         pathToContextNodeMap.putIfAbsent(contextList.path(), contextList);
     }
 
     @Override
     public void visit(ContextTextAST contextText, ASTNode parent) {
-        if (contextText.parent() == null && parent != null) {
-            contextText.parent(parent);
-        }
+        setParent(contextText, parent);
         applyAdditionalVisitors(contextText);
         pathToContextNodeMap.putIfAbsent(contextText.path(), contextText);
     }
@@ -423,7 +458,7 @@ public class Interpreter implements Visitor<ASTNode> {
      * Create unresolvedInput, add it to the {@code unresolvedInputs} and throw {@link WaitForUserInput} to stop the
      * interpreting process.
      *
-     * @param input                   initial unresolved {@code InputNodeAST} from the AST tree.
+     * @param input initial unresolved {@code InputNodeAST} from the AST tree.
      * @param unresolvedUserInputNode unresolvedUserInputNode that will be sent to the user
      */
     private void processUnresolvedInput(InputNodeAST input, InputNodeAST unresolvedUserInputNode) {
@@ -440,7 +475,7 @@ public class Interpreter implements Visitor<ASTNode> {
         if (canBeGenerated) {
             return;
         }
-        Flow flow = new Flow(archetype, startDescriptorPath, true, Collections.emptyList());
+        Flow flow = new Flow(archetype, startDescriptorPath, true, List.of(), Map.of());
         ContextAST context = new ContextAST();
         context.children().addAll(pathToContextNodeMap.values());
         FlowState state = flow.build(context);
@@ -469,18 +504,8 @@ public class Interpreter implements Visitor<ASTNode> {
         return Paths.get(currentDirectory).resolve(scriptSrc).normalize().toString();
     }
 
-    private String resolveDirectory(String currentValue, ASTNode.Location location) {
-        if (currentValue.startsWith("/")) {
-            return currentValue;
-        }
-        return Paths.get(location.currentDirectory()).resolve(currentValue).normalize().toString();
-    }
-
     private void validate(InputNodeAST input) {
         if (input.isOptional() && input.defaultValue() == null) {
-            if (input instanceof InputTextAST && ((InputTextAST) input).placeHolder() != null) {
-                return;
-            }
             throw new InterpreterException(
                     String.format("Input node %s is optional but it does not have a default value", input.path()));
         }
@@ -492,15 +517,22 @@ public class Interpreter implements Visitor<ASTNode> {
 
     private Map<String, String> convertContext() {
         Map<String, String> result = new HashMap<>();
-        pathToContextNodeMap.forEach((key, value) -> {
-            result.putIfAbsent(key, value.accept(contextToStringConvertor, null));
-        });
+        pathToContextNodeMap.forEach((key, value) -> result.putIfAbsent(key, value.accept(contextToStringConvertor, null)));
         return result;
     }
 
-    private String replaceDefaultValue(String defaultValue) {
-        if (defaultValue == null) {
-            return null;
+    private void replaceDefaultValue(InputNodeAST input) {
+        input.defaultValue(replaceDefaultValue(input.path(), input.defaultValue()));
+    }
+
+    private String replaceDefaultValue(String path, String defaultValue) {
+        String externalDefault = externalDefaults.get(path);
+        if (externalDefault == null) {
+            if (defaultValue == null) {
+                return null;
+            }
+        } else {
+            defaultValue = externalDefault;
         }
         if (!defaultValue.contains("${")) {
             return defaultValue;
